[gd_scene load_steps=12 format=3 uid="uid://brql4k667q03l"]

[ext_resource type="Script" path="res://Shared/MainMenu/MainMenu.gd" id="1_0aonn"]
[ext_resource type="PackedScene" uid="uid://eqq4xrm6rs41" path="res://Shared/MainMenu/MenuButton.tscn" id="1_x40x4"]
[ext_resource type="Theme" uid="uid://dpww4skimgrkf" path="res://Themes/MenuButton.tres" id="3_3cbfe"]
[ext_resource type="Script" path="res://Shared/MainMenu/SettingsScreen.gd" id="3_aonsm"]
[ext_resource type="Script" path="res://Shared/Steam/MultiplayerLobby.gd" id="3_yer6t"]
[ext_resource type="Script" path="res://Shared/MainMenu/SingleplayerScreen.gd" id="4_y0wrq"]
[ext_resource type="PackedScene" uid="uid://cplb22liq6u7f" path="res://Shared/Steam/ChatPanel.tscn" id="6_g1pbt"]
[ext_resource type="PackedScene" uid="uid://dhm06mgthd21o" path="res://Shared/MainMenu/CustomSlider.tscn" id="6_taoxl"]
[ext_resource type="Theme" uid="uid://4pp88ienoax4" path="res://Themes/BackButton.tres" id="7_xhxjq"]
[ext_resource type="Script" path="res://Shared/Steam/GenericPlayer.gd" id="10_x4v7x"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8ria7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0aonn")

[node name="TitleScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColorRect" type="ColorRect" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.788235, 0.0784314, 1)

[node name="Menu" type="VBoxContainer" parent="TitleScreen"]
custom_minimum_size = Vector2(1000, 550)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -24.0
offset_right = 6.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleScreen/Menu"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0.894118, 0.341176, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 140
text = "GODOT GAME TEMPLATE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="VBoxContainer" parent="TitleScreen/Menu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25

[node name="SingleplayerButton" parent="TitleScreen/Menu/Buttons" instance=ExtResource("1_x40x4")]
layout_mode = 2
theme = ExtResource("3_3cbfe")
theme_override_font_sizes/font_size = 40
text = "Singleplayer"
flat = false

[node name="MultiplayerButton" parent="TitleScreen/Menu/Buttons" instance=ExtResource("1_x40x4")]
layout_mode = 2
theme = ExtResource("3_3cbfe")
theme_override_font_sizes/font_size = 40
text = "Multiplayer"
flat = false

[node name="SettingsButton" parent="TitleScreen/Menu/Buttons" instance=ExtResource("1_x40x4")]
layout_mode = 2
theme = ExtResource("3_3cbfe")
theme_override_font_sizes/font_size = 40
text = "Settings"
flat = false

[node name="CreditsButton" parent="TitleScreen/Menu/Buttons" instance=ExtResource("1_x40x4")]
layout_mode = 2
theme = ExtResource("3_3cbfe")
theme_override_font_sizes/font_size = 40
text = "Credits"
flat = false

[node name="QuitButton" type="Button" parent="TitleScreen/Menu/Buttons"]
layout_mode = 2
theme = ExtResource("3_3cbfe")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="SingleplayerScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_y0wrq")

[node name="BackButton" type="Button" parent="SingleplayerScreen"]
layout_mode = 0
offset_right = 195.0
offset_bottom = 77.0
text = "Back"

[node name="StartGameButton" type="Button" parent="SingleplayerScreen"]
layout_mode = 0
offset_left = 392.0
offset_top = 57.0
offset_right = 700.0
offset_bottom = 185.0
text = "Start Game"

[node name="MultiplayerScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_yer6t")

[node name="TextureRect" type="TextureRect" parent="MultiplayerScreen"]
modulate = Color(0.180392, 0.301961, 0.243137, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_8ria7")

[node name="ColorRect" type="ColorRect" parent="MultiplayerScreen"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.301961, 0.243137, 1)

[node name="Midpoint" type="Node2D" parent="MultiplayerScreen"]
position = Vector2(103, 99.5)

[node name="ChatPanel" parent="MultiplayerScreen" instance=ExtResource("6_g1pbt")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="InviteFriendsButton" type="Button" parent="MultiplayerScreen"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -56.0
offset_right = 136.0
offset_bottom = -14.0
grow_vertical = 0
text = "Invite Friends"

[node name="CurrentLobbyMemberNumberLabel" type="Label" parent="MultiplayerScreen/InviteFriendsButton"]
layout_mode = 0
offset_left = 20.0
offset_top = -37.0
offset_right = 103.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyButton" type="Button" parent="MultiplayerScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -133.0
offset_right = -21.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 0
text = "Ready"

[node name="StartGameButton" type="Button" parent="MultiplayerScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -183.0
offset_top = -67.0
offset_right = -18.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
disabled = true
text = "Start Game"

[node name="LeaveLobbyButton" type="Button" parent="MultiplayerScreen"]
layout_mode = 0
offset_left = 14.0
offset_top = 14.0
offset_right = 179.0
offset_bottom = 64.0
text = "Leave Lobby"

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerScreen"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="MultiplayerScreen/VBoxContainer"]
layout_mode = 2

[node name="SettingsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_aonsm")

[node name="ColorRect" type="ColorRect" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.890196, 0.560784, 1)

[node name="ScreenVBox" type="VBoxContainer" parent="SettingsScreen"]
layout_mode = 0
offset_right = 1880.0
offset_bottom = 1040.0
theme_override_constants/separation = 75

[node name="Label" type="Label" parent="SettingsScreen/ScreenVBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.180392, 0.156863, 0.164706, 1)
theme_override_font_sizes/font_size = 100
text = "Settings"
vertical_alignment = 1

[node name="VolumeControlsVBox" type="VBoxContainer" parent="SettingsScreen/ScreenVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 100
alignment = 1

[node name="MasterVolumeSlider" parent="SettingsScreen/ScreenVBox/VolumeControlsVBox" instance=ExtResource("6_taoxl")]
layout_mode = 2
size_flags_horizontal = 4
slider_name = "Master Volume"

[node name="MusicVolumeSlider" parent="SettingsScreen/ScreenVBox/VolumeControlsVBox" instance=ExtResource("6_taoxl")]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"BlueButton"
slider_name = "Music Volume"

[node name="EffectsVolumeSlider" parent="SettingsScreen/ScreenVBox/VolumeControlsVBox" instance=ExtResource("6_taoxl")]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"YellowButton"
slider_name = "Effects Volume"

[node name="UIVolumeSlider" parent="SettingsScreen/ScreenVBox/VolumeControlsVBox" instance=ExtResource("6_taoxl")]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GreenButton"
slider_name = "UI Volume"

[node name="BackButton" type="Button" parent="SettingsScreen"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 204.0
offset_bottom = 96.0
theme = ExtResource("7_xhxjq")
theme_type_variation = &"BlackBackButton"
theme_override_font_sizes/font_size = 40
text = "Back"

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CreditsScreen/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Dev1" type="VBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev1"]
layout_mode = 2

[node name="Name" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev1"]
layout_mode = 2
text = "Firstname Lastname"

[node name="Description" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev1"]
layout_mode = 2
text = "Description of responsibilities

Jam snack of choice: Beef Jerky"

[node name="Dev2" type="VBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev2"]
layout_mode = 2

[node name="Name" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev2"]
layout_mode = 2
text = "Firstname Lastname"

[node name="Description" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev2"]
layout_mode = 2
text = "Description of responsibilities

Jam snack of choice: Beef Jerky"

[node name="Dev3" type="VBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev3"]
layout_mode = 2

[node name="Name" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev3"]
layout_mode = 2
text = "Firstname Lastname"

[node name="Description" type="Label" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/HBoxContainer/Dev3"]
layout_mode = 2
text = "Description of responsibilities

Jam snack of choice: Beef Jerky"

[node name="Footer" type="HBoxContainer" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" parent="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/Footer" instance=ExtResource("1_x40x4")]
layout_mode = 2
text = "Back"
flat = false

[node name="Game" type="Node2D" parent="."]
visible = false
script = ExtResource("10_x4v7x")

[node name="Button" type="Button" parent="Game"]
offset_left = 291.0
offset_top = 241.0
offset_right = 539.0
offset_bottom = 343.0
text = "Back"

[connection signal="mouse_entered" from="TitleScreen/Menu/Buttons/SingleplayerButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/SingleplayerButton" to="." method="_on_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Menu/Buttons/MultiplayerButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/MultiplayerButton" to="." method="_on_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Menu/Buttons/SettingsButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/SettingsButton" to="." method="_on_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Menu/Buttons/CreditsButton" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/CreditsButton" to="." method="_on_pressed"]
[connection signal="pressed" from="TitleScreen/Menu/Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="SingleplayerScreen/BackButton" to="SingleplayerScreen" method="_on_button_pressed"]
[connection signal="pressed" from="SingleplayerScreen/StartGameButton" to="SingleplayerScreen" method="_on_start_game_button_pressed"]
[connection signal="send_message_button_pressed" from="MultiplayerScreen/ChatPanel" to="MultiplayerScreen" method="_on_send_message_button_pressed"]
[connection signal="mouse_entered" from="MultiplayerScreen/InviteFriendsButton" to="MultiplayerScreen" method="_on_hover"]
[connection signal="pressed" from="MultiplayerScreen/InviteFriendsButton" to="MultiplayerScreen" method="_on_invite_friends_button_pressed"]
[connection signal="mouse_entered" from="MultiplayerScreen/ReadyButton" to="MultiplayerScreen" method="_on_hover"]
[connection signal="pressed" from="MultiplayerScreen/ReadyButton" to="MultiplayerScreen" method="_on_ready_button_pressed"]
[connection signal="mouse_entered" from="MultiplayerScreen/StartGameButton" to="MultiplayerScreen" method="_on_hover"]
[connection signal="pressed" from="MultiplayerScreen/StartGameButton" to="MultiplayerScreen" method="_on_start_game_button_pressed"]
[connection signal="mouse_entered" from="MultiplayerScreen/LeaveLobbyButton" to="MultiplayerScreen" method="_on_hover"]
[connection signal="pressed" from="MultiplayerScreen/LeaveLobbyButton" to="MultiplayerScreen" method="_on_leave_lobby_button_pressed"]
[connection signal="slider_value_changed" from="SettingsScreen/ScreenVBox/VolumeControlsVBox/MasterVolumeSlider" to="SettingsScreen" method="_on_slider_value_changed"]
[connection signal="slider_value_changed" from="SettingsScreen/ScreenVBox/VolumeControlsVBox/MusicVolumeSlider" to="SettingsScreen" method="_on_slider_value_changed"]
[connection signal="slider_value_changed" from="SettingsScreen/ScreenVBox/VolumeControlsVBox/EffectsVolumeSlider" to="SettingsScreen" method="_on_slider_value_changed"]
[connection signal="slider_value_changed" from="SettingsScreen/ScreenVBox/VolumeControlsVBox/UIVolumeSlider" to="SettingsScreen" method="_on_slider_value_changed"]
[connection signal="pressed" from="SettingsScreen/BackButton" to="SettingsScreen" method="_on_back_button_pressed"]
[connection signal="pressed" from="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/Footer/BackButton" to="." method="_on_pressed"]
[connection signal="pressed" from="CreditsScreen/CenterContainer/MarginContainer/VBoxContainer/Footer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Game/Button" to="Game" method="_on_button_pressed"]
